--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 /*! =========================================================
  *
  Material Bootstrap Wizard - V1.0.1
- 
+
 *
 * =========================================================
 *
@@ -30,9 +30,9 @@
  *
  *               Buddha Bless:  "No Bugs"
  *
- * ========================================================= */                  
+ * ========================================================= */
  body{
-    font-family: 'Source Sans'; 
+    font-family: 'Source Sans';
 }
 
 
@@ -113,9 +113,9 @@
     background: #dff0d8 !important;
 }
 
-.theme--light .navigation-drawer 
-.list__tile:not(.list__tile--active), 
-.application .theme--light.navigation-drawer 
+.theme--light .navigation-drawer
+.list__tile:not(.list__tile--active),
+.application .theme--light.navigation-drawer
 .list__tile:not(.list__tile--active) {
     text-decoration: none !important;
 }
@@ -245,3 +245,9 @@ div.dataTables_wrapper div.dataTables_filter input {
     /* box-shadow: 0 9px 30px -6px rgba(255, 255, 255, 0.43) !important; */
 }
 .panel-header{height:260px;padding-top:80px;padding-bottom:45px;background:#141e30;background:linear-gradient(90deg,#0c2646,#204065 60%,#2a5788);position:relative;overflow:hidden}.panel-header .header .title{color:#fff}.panel-header .header .category{max-width:600px;color:hsla(0,0%,100%,.5);margin:0 auto;font-size:13px}.panel-header .header .category a{color:#fff}.panel-header-sm{height:135px}.panel-header-lg{height:380px}.card{border:0;border-radius:.1875rem;display:inline-block;position:relative;width:100%;margin-bottom:20px;box-shadow:0 1px 15px 1px rgba(39,39,39,.1)}.card .card-body{padding:15px 15px 10px}
+
+
+
+.el-input--suffix .el-input__inner {
+    background: #e8f0fe !important;
+}
