--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,3 +251,8 @@ div.dataTables_wrapper div.dataTables_filter input {
 .el-input--suffix .el-input__inner {
     background: #e8f0fe !important;
 }
+
+
+.v-responsive__sizer~.v-responsive__content {
+    margin-left: 0 !important;
+}
